# bevy_cursor

./: Bevy.md  Cargo.toml  LICENSE-MIT  README.md
.github/: FUNDING.yml  release.yml
.github/workflows/: ci.yml  prepare-release.yml  release.yml
examples/: basic.rs  multiple_windows.rs  tilemap.rs
examples/utils/: change_detection.rs  mod.rs
src/: lib.rs
