[package]
name = "bevy_cursor"
version = "0.2.0"
edition = "2021"
authors = ["Tristan Guichaoua <tguichaoua.dev@gmail.com>"]
description = "A bevy plugin to track information about the cursor"

repository = "https://github.com/tguichaoua/bevy_cursor"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "cursor", "window", "camera"]
categories = ["game-engines"]

exclude = [".github/", "assets/"]

# ---------------------------------------------------------------------------- #

[features]
default = ["2d"]
2d = []
3d = []

# ---------------------------------------------------------------------------- #

[dependencies]
bevy = { version = "0.12.0", default-features = false, features = [
    "bevy_render",
] }
smallvec = { version = "1.11.0", features = ["union"] }


[dev-dependencies]
bevy = { version = "0.12.0", default-features = false, features = [
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "png",
    "x11",
] }

# ---------------------------------------------------------------------------- #

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

# ---------------------------------------------------------------------------- #

[[example]]
name = "basic"
required-features = ["2d"]

[[example]]
name = "multiple_windows"
required-features = ["2d"]

# ---------------------------------------------------------------------------- #

[lints.rust]
absolute_paths_not_starting_with_crate = "warn"
let_underscore_drop = "warn"
missing_docs = "warn"
non_ascii_idents = "warn"
unsafe_code = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
unused_tuple_struct_fields = "warn"
variant_size_differences = "warn"

[lints.clippy]
absolute_paths = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
arithmetic_side_effects = "warn"
as_conversions = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
big_endian_bytes = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
decimal_literal_representation = "warn"
default_numeric_fallback = "warn"
default_union_representation = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
else_if_without_else = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
error_impl_error = "warn"
exit = "warn"
expect_used = "warn"
filetype_is_file = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
get_unwrap = "warn"
host_endian_bytes = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
indexing_slicing = "warn"
inline_asm_x86_att_syntax = "warn"
inline_asm_x86_intel_syntax = "warn"
integer_division = "warn"
# iter_over_hash_type = "warn"             # 1.75
large_include_file = "warn"
let_underscore_must_use = "warn"
let_underscore_untyped = "warn"
little_endian_bytes = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
mem_forget = "warn"
min_ident_chars = "warn"
missing_assert_message = "warn"
missing_asserts_for_indexing = "warn"
missing_docs_in_private_items = "warn"
mixed_read_write_in_expression = "warn"
mod_module_files = "warn"
modulo_arithmetic = "warn"
multiple_inherent_impl = "warn"
multiple_unsafe_ops_per_block = "warn"
mutex_atomic = "warn"
needless_raw_strings = "warn"
non_ascii_literal = "warn"
panic = "warn"
panic_in_result_fn = "warn"
partial_pub_fields = "warn"
pattern_type_mismatch = "warn"
print_stderr = "warn"
print_stdout = "warn"
pub_without_shorthand = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
separated_literal_suffix = "warn"
single_char_lifetime_names = "warn"
str_to_string = "warn"
string_add = "warn"
string_lit_chars_any = "warn"
string_slice = "warn"
string_to_string = "warn"
suspicious_xor_used_as_pow = "warn"
tests_outside_test_module = "warn"
todo = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unreachable = "warn"
unseparated_literal_suffix = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
verbose_file_reads = "warn"
wildcard_enum_match_arm = "warn"

# ---------------------------------------------------------------------------- #
