[package]
name = "bevy_cursor"
version = "0.6.0"
edition = "2024"
authors = ["Tristan Guichaoua <tguichaoua.dev@gmail.com>"]
description = "A bevy plugin to track information about the cursor"

repository = "https://github.com/tguichaoua/bevy_cursor"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "cursor", "window", "camera"]
categories = ["game-engines"]

exclude = [".github/", "assets/"]

# ---------------------------------------------------------------------------- #

[features]
2d = []
3d = []

# ---------------------------------------------------------------------------- #

[dependencies]
bevy = { version = "0.17.0", default-features = false, features = [
    "bevy_render",
    "bevy_window",
] }
smallvec = { version = "1.11.0", features = ["union"] }


[dev-dependencies]
bevy = { version = "0.17.0", default-features = false, features = [
    "std",
    "async_executor",
    "bevy_anti_alias",
    "bevy_camera",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_input_focus",
    "bevy_log",
    "bevy_post_process",
    "bevy_render",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_winit",
    "default_font",
    "png",
    "bevy_sprite",
    "x11",
    "wayland"
] }

# ---------------------------------------------------------------------------- #

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

# ---------------------------------------------------------------------------- #

[[example]]
name = "basic"

[[example]]
name = "multiple_windows"
required-features = ["2d"]

# ---------------------------------------------------------------------------- #

[lints.rust]
missing_docs = "warn"
non_ascii_idents = "warn"
unsafe_code = "forbid"

[lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
redundant_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"

# ---------------------------------------------------------------------------- #
